change website configuration

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 
 title: Son Pham
 locale: en_US
-description: Describe your website here.
+description: Kitschy artist/Art Historians + AI enthusiast
 logo: site-logo.png
 search: true
 url: http://aidreamer.github.io
