Change title once again

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 
 title: Son Pham
 locale: en_US
-description: Kitschy artist/Art Historians + AI enthusiast
+description: Kitschy Art Historian + AI Enthusiast
 logo: site-logo.png
 search: true
 url: http://aidreamer.github.io
