Changing the header bar

--- a/_config.yml
+++ b/_config.yml
@@ -48,8 +48,8 @@ owner:
   pinterest: #username
   weibo: #userid
   google:
-    plus: #username
-    analytics:
+    plus: Son Pham
+    analytics: UA-68681321-1
     verify:
     ad-client:
     ad-slot:
